syntax = "proto3"; 
import "google/protobuf/timestamp.proto";

package cloud.lianmi.im.user;
option go_package = "github.com/lianmi/servers/api/proto/user";

//性别枚举定义 
enum Gender {
    Sex_Unknown = 0;
    Sex_Male = 1;
    Sex_Female = 2;
}

//更新当前用户资料--可以单独更新某些字段
//User字段名枚举定义
enum UserField{
   Af_Undefined=0;
   Af_Nick=1;
   Af_Gender=2;
   Af_Avatar=3;
   Af_Birth=4;
   Af_Sign=5;
   Af_Tel=6;
   Af_Email=7;
   Af_Ex=8;
   Af_AllowType=9;
}

//账号类型
enum UserType{
   Ut_Undefined=0;
   //一般用户
   Ut_Normal=1;
   //网点用户
   Ut_Business=2;
   //系统用户, 例如admin
   Ut_System=3;
}

service Users {
    //获取用户信息
    rpc GetUser (UserReq) returns (UserResp);

    //短信验证码
    rpc GenerateSmsCode (SmsCodeReq) returns (SmsCodeResp);

    //注册
    rpc Register (RegisterReq) returns (RegisterResp);

    //登录 Login,  根据手机号及密码， 获取token 
    rpc Login (LoginReq) returns (LoginResp);

    //修改密码
    rpc ChanPasswd (ChanPasswdReq) returns (ChanPasswdResp);
}

message RespHeader {
  int32  errCode     = 1;  //错误码  默认是0为成功， 非0-失败
  string errMsg      = 2;  //错误描述
}


//=== 用户信息 === //
message UserReq {
    string user = 1;
}

message UserResp {
    RespHeader status  = 1;
    User       user    = 2;
}


//用户信息
message User {
    uint64 id        = 1;                         //ID
    string username  = 2;                        //账号 是否必填-是
    string passwd    = 3;                         //密码 是否必填-是
    Gender gender    = 4;                         //性别 是否必填-是
    string avatar    = 5;                         //用户头像 是否必填-否 示例:http://123.com/456.png
    string label     = 6;                         //用户标签 是否必填-否 示例:
    string mobile    = 7;                         //用户手机号 是否必填-否 示例:86+13333333333
    string email     = 8;                         //用户邮箱 是否必填-否 示例:
    string extend    = 9;                         //扩展字段,JSON格式 是否必填-否
    UserType userType            = 10;            //账户类型 是否必填-是
    string address               = 11;            //地址，如果是商户，则必填
    string contactPerson         = 12;            //联系人，如果是商户，则必填
    string introductory          = 13;            //用户简介 是否必填-否
    google.protobuf.Timestamp createdAt = 14;     //用户注册时间,Unix时间戳
    google.protobuf.Timestamp updatedAt = 15;     //用户资料最后更新时间,Unix时间戳
}


//==== 注册 ===//
message RegisterReq {
   User   user = 1;
   string smsCode = 2; //短信验证码
}

message RegisterResp {
  RespHeader status  = 1;
  string accesstoken = 2;   //注册成功后返回token
}

//=== 获取短信验证码 ===//
message SmsCodeReq {
  string mobile = 1; //手机号码
}

message SmsCodeResp {
  RespHeader status  = 1;  
  string     smsCode    = 2; //短信验证码
}

//==== 根据用户名及密码登录 ===//
message LoginReq {
  string username   = 1;  //用户名
  string password   = 2;  //MD5加密过的
  string smsCode    = 3;  //短信验证码
}

message LoginResp {
  RespHeader status  = 1;  
  string accesstoken = 2;  //用户token, jwt
}

//==== 修改密码 ===//
message ChanPasswdReq {
  string oldpasswd    = 1;  //旧密码
  string smsCode      = 2;  //短信验证码
  string password     = 3;  //新密码
}

message ChanPasswdResp {
  RespHeader status  = 1;  
}
